--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.bytesmatter.io"
 documentation: "https://www.bytesmatter.io/google-tag-manager-installations/"
 versions:
-  - sha: 63872ec748075229d97e2ad63c04026cbe631626
-    changeNotes: Initial Version
+  - sha: 0cec08d1ad7687327dc562b47c8dffb6cc00a34f
+    changeNotes: Fixing description field to remove extra quotes and add missing comma that meant the template could not be parsed correctly
