Invalidating to remove from tag manager

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,3 +1,4 @@
+invalidate
 homepage: "https://www.bytesmatter.io"
 documentation: "https://www.bytesmatter.io/google-tag-manager-installations/"
 versions:
