--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,9 @@
-homepage: "https://www.bytesmatter.io"
-documentation: "https://www.bytesmatter.io/google-tag-manager-installations/"
+homepage: "https://appservation.net"
+documentation: "https://appservation.net/google-tag-manager-installations/"
 versions:
+  - sha: 6f03a0be5d60a5083928f1f0df0cc904eef72b06
+    changeNotes: Using new domain new
+    
   - sha: b8ccb13f6e1053b91d6ddeefac51bdc206bb10b3
     changeNotes: Configuration object requires the container (array) for async metadata to be present at the point of initialisation
 
